objects/ALM_User__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ALM_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ALM User</label>
    <nameField>
        <label>ALM User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ALM Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>